@@ -23,6 +23,6 @@ This release includes the following known bugs:
 This release would not have looked like this without help, code, reports and
 advice from friends like these:
 
- David James, Chris Deidun
+ Daniel Fandrich, Yang Tse, David James, Chris Deidun, Bill Egert
 
         Thanks! (and sorry if I forgot to mention someone)
